Adicionando cadastro de grupos, deletar grupo e buscar usuarios, logo logo cadastro